@@ -5898,12 +5898,13 @@ class WidthVisitor final : public VNVisitor {
                 // We've resolved parameters and hit a module that we couldn't resolve.  It's
                 // finally time to report it.
                 // Note only here in V3Width as this is first visitor after V3Dead.
-                nodep->modNameFileline()->v3error(
-                    "Cannot find file containing module: '"
-                    << nodep->modName() << "'\n"
-                    << nodep->modNameFileline()->warnContextPrimary()
-                    << V3Error::warnAdditionalInfo()
-                    << v3Global.opt.filePathLookedMsg(nodep->modNameFileline(), nodep->modName()));
+                nodep->modNameFileline()->v3warn(
+                    MODMISSING, "Cannot find file containing module: '"
+                                    << nodep->modName() << "'\n"
+                                    << nodep->modNameFileline()->warnContextPrimary()
+                                    << V3Error::warnAdditionalInfo()
+                                    << v3Global.opt.filePathLookedMsg(nodep->modNameFileline(),
+                                                                      nodep->modName()));
             }
             if (nodep->rangep()) userIterateAndNext(nodep->rangep(), WidthVP{SELF, BOTH}.p());
             userIterateAndNext(nodep->pinsp(), nullptr);
