@@ -1,15 +1,15 @@
-%Error: t/t_gen_missing.v:43:20: Cannot find file containing module: 'foo_not_needed'
+%Error-MODMISSING: t/t_gen_missing.v:43:20: Cannot find file containing module: 'foo_not_needed'
    43 |                    foo_not_needed i_foo(.x(foo[j]), .y(bar[j]));
       |                    ^~~~~~~~~~~~~~
-        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
-        ... Looked in:
-             t/foo_not_needed
-             t/foo_not_needed.v
-             t/foo_not_needed.sv
-             foo_not_needed
-             foo_not_needed.v
-             foo_not_needed.sv
-             obj_vlt/t_gen_missing_bad/foo_not_needed
-             obj_vlt/t_gen_missing_bad/foo_not_needed.v
-             obj_vlt/t_gen_missing_bad/foo_not_needed.sv
+                   ... For error description see https://verilator.org/warn/MODMISSING?v=latest
+                   ... Looked in:
+                        t/foo_not_needed
+                        t/foo_not_needed.v
+                        t/foo_not_needed.sv
+                        foo_not_needed
+                        foo_not_needed.v
+                        foo_not_needed.sv
+                        obj_vlt/t_gen_missing_bad/foo_not_needed
+                        obj_vlt/t_gen_missing_bad/foo_not_needed.v
+                        obj_vlt/t_gen_missing_bad/foo_not_needed.sv
 %Error: Exiting due to
